# renikud-v4

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md
plans/overfit/: overfit_001.py
plans/research/: research_001.md
renikud-onnx/: README.md  pyproject.toml
renikud-onnx/examples/: basic.py
renikud-onnx/scripts/: benchmark.py  export.py
renikud-onnx/src/renikud_onnx/: __init__.py
renikud-rs/: Cargo.toml
renikud-rs/examples/: basic.rs
renikud-rs/src/: lib.rs
scripts/: benchmark.py
src/: config.py  constants.py  data.py  evaluate.py  infer.py  model.py  prepare_data.py  prepare_tokens.py  tokenization.py  train.py
